<resources>
    <string name="app_name">JV_MHike</string>
    <string name="add_hike_title">Add new hike activity</string>
    <string name="update_hike_title">Update hike activity</string>
    <string name="hike_detail_title">Detail hike activity</string>
    <string name="add_observation_title">Add Observation</string>
    <string name="update_observation_title">Update Observation</string>
    <string name="hike_name">Name of the hike</string>
    <string name="hike_location">Location</string>
    <string name="datetime_hike">Hiking date</string>
    <string name="parking_available">Parking available</string>
    <string name="hike_length">Length of the hike</string>
    <string name="hike_level">Difficulty level</string>
    <string name="hike_description">Description</string>
    <string name="observation_title">Observation</string>
    <string name='add_observation'>Add Observation</string>
    <string name='back_content'>Back</string>

    <string-array name="hike_level">
        <item>Easiest</item>
        <item>Moderate</item>
        <item>Moderately Strenuous</item>
        <item>Strenuous</item>
        <item>Very Strenuous</item>
    </string-array>
</resources>