<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/alice_blue"
    tools:context=".activities.AddHikeActivity">

    <TextView
        android:id="@+id/add_new_hike_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add_hike_title"
        android:textColor="@color/polo_blue"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hike_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/hike_name"
        android:textSize="17sp"
        android:textColor="@color/polo_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_hike_title" />

    <EditText
        android:id="@+id/hike_name_field"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:hint="Name of hike..."
        android:background="@drawable/background_input"
        app:layout_constraintTop_toBottomOf="@+id/hike_name_title" />

    <TextView
        android:id="@+id/hike_location_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:text="@string/hike_location"
        android:textColor="@color/polo_blue"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hike_name_field" />

    <EditText
        android:id="@+id/hike_location_field"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:hint="Hike location..."
        android:background="@drawable/background_input"
        app:layout_constraintTop_toBottomOf="@+id/hike_location_title" />
    <TextView
        android:id="@+id/hike_date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/datetime_hike"
        android:textSize="17sp"
        android:textColor="@color/polo_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hike_location_field" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:inputType="datetime"
        android:onClick="openDatePiker"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:hint="Date and Time..."
        android:background="@color/polo_blue"
        app:layout_constraintTop_toBottomOf="@+id/hike_date_title" />

    <TextView
        android:id="@+id/hike_parking_available_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/create_round"
        android:text="@string/parking_available"
        android:textColor="@color/polo_blue"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton">

        <RadioButton
            android:id="@+id/yes_option"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="@color/polo_blue"
            android:text="Yes"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/no_option"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="@color/polo_blue"

            android:text="No"
            android:textSize="17sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/length_hike_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/hike_length"
        android:textColor="@color/polo_blue"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hike_parking_available_title" />

    <EditText
        android:id="@+id/length_hike_field"
        android:inputType="number"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_input"
        android:hint="Length hike..."
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/level_hike_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:text="@string/hike_level"
        android:textColor="@color/polo_blue"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length_hike_title" />

    <Spinner
        android:id="@+id/hike_difficulty_spinner"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/background_input"
        android:textColor="@color/white"
        android:hint="Select level hike"
        android:textColorHint="@color/input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length_hike_field" />

    <TextView
        android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:text="@string/hike_description"
        android:textColor="@color/polo_blue"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hike_difficulty_spinner" />

    <EditText
        android:id="@+id/hike_description_field"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@color/polo_blue"
        app:layout_constraintTop_toBottomOf="@+id/description_title" />

    <Button
        android:id="@+id/save_hike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="Save"
        android:textColor="@color/white"
        android:background="@drawable/background_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hike_description_field" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/polo_blue"
        app:itemBackground="@color/polo_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/navbar_menu"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>